--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "OpenTurnTable",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.10.4",
     "mongoose": "^3.8.20",
+    "png-js": "^0.1.1",
     "q": "^1.1.2",
     "socket.io": "^1.2.1"
   }
