--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "mongoose": "^3.8.20",
     "png-js": "^0.1.1",
     "q": "^1.1.2",
+    "request": "^2.49.0",
     "socket.io": "^1.2.1"
   }
 }
