--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "OpenTurnTable",
   "version": "0.0.1",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.10.4",
@@ -10,5 +11,10 @@
     "q": "^1.1.2",
     "request": "^2.49.0",
     "socket.io": "^1.2.1"
+  },
+  "description": "An open source server for the now-defunct Turntable.fm",
+  "repository" : {
+    "type" : "git",
+    "url" : "http://github.com/aportner/opentt.git"
   }
 }
