--- a/config.json
+++ b/config.json
@@ -51,6 +51,13 @@
                             "id": "SC_API_ID",
                             "page": 20
                         }
+                    },
+                    {
+                        "name": "spotify",
+                        "config": {
+                            "username": "username",
+                            "password": "********"
+                        }
                     }
                 ]
             }
