--- a/config.json
+++ b/config.json
@@ -56,7 +56,8 @@
                         "name": "spotify",
                         "config": {
                             "username": "username",
-                            "password": "********"
+                            "password": "********",
+                            "page": 20
                         }
                     }
                 ]
