--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.10.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.10.4",
+    "lame": "^1.1.1",
     "mongoose": "^3.8.20",
     "multer": "^0.1.6",
     "png-js": "^0.1.1",
@@ -13,6 +14,7 @@
     "request": "^2.49.0",
     "socket.io": "^1.2.1",
     "spotify-web": "^1.2.0",
+    "throttle": "^1.0.3",
     "xml2js": "^0.4.4"
   },
   "description": "An open source server for the now-defunct Turntable.fm",
